--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="topbar">
-            <img  class="red" src="red circle.jpeg" height="30px" width="30px"  alt="red">
+            <img  class="red" src="red.jpeg" height="30px" width="30px"  alt="red">
                 <header>
                     <a class="bar" href="contact.html">Contact</a>
                     <a class="bar" href="About.html">About</a>
